--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <span id="copyStatus" style="font-size:0.9em; color:var(--secondary); margin-left:10px; display:none;">Copied!</span>
     </div>
     <nav>
-      <button class="buy-btn" onclick="window.open('https://pump.fun/', '_blank')">Buy on pump.fun</button>
+      <button class="pumpfun-btn buy-btn" onclick="window.open('https://pump.fun/', '_blank')">Buy on pump.fun</button>
       <button disabled>Raydium (soon)</button>
       <button disabled>Jupiter (soon)</button>
       <button disabled>Orca (soon)</button>
@@ -25,7 +25,7 @@
   </header>
 
   <section>
-    <h2>Why TokenNameHere?</h2>
+    <h2 id="why-heading">Why TokenNameHere?</h2>
     <div class="features">
       <div class="feature-card">
         <img src="feature1.png" alt="Community" class="feature-img" />
@@ -82,7 +82,7 @@
         </table>
       </div>
       <div class="piechart-wrap">
-        <canvas id="tokenomics-pie"></canvas>
+        <canvas id="tokenomics-pie" width="160" height="160"></canvas>
       </div>
     </div>
   </section>
@@ -123,7 +123,7 @@
   <section>
     <h2>Join the Memevolution</h2>
     <div class="cta-section">
-      <button class="buy-btn" onclick="window.open('https://pump.fun/', '_blank')">Buy Now on pump.fun</button>
+      <button class="pumpfun-btn buy-btn" onclick="window.open('https://pump.fun/', '_blank')">Buy Now on pump.fun</button>
       <div class="socials">
         <a class="social-link" href="https://twitter.com/" target="_blank" title="Twitter/X"><span>🐦</span></a>
         <a class="social-link" href="https://t.me/" target="_blank" title="Telegram"><span>💬</span></a>
