--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
 
   <section>
-    <h2 id="why-heading">Why TokenNameHere?</h2>
+    <h2 id="why-heading">Why This Token?</h2>
     <div class="features">
       <div class="feature-card">
         <img src="feature1.png" alt="Community" class="feature-img" />
